<resources>
    <string name="app_name">RawChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fragment_chat__message">Message</string>
    <string name="Fragment_chat__attach_file">Attach file</string>
    <string name="Fragment_chat__send_message">Send message</string>
    <string name="Fragment_sign_in__sign_in">Sign In</string>
    <string name="Fragment_sign_in__email">Email</string>
    <string name="Fragment_sign_in__password">Password</string>
    <string name="Fragment_sign_in__sign_in_btn">Sign In</string>
    <string name="Fragment_sign_in__don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="Fragment_sign_in_land__email">Email</string>
    <string name="Fragment_sign_in_land__password">Password</string>
    <string name="Fragment_sign_in_land__sign_in_btn">Sign In</string>
    <string name="Fragment_sign_in_land__don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="Fragment_sign_up__sign_up">Sign Up</string>
    <string name="Fragment_sign_up__email">Email</string>
    <string name="Fragment_sign_up__password">Password</string>
    <string name="Fragment_sign_up__sign_up_btn">Sign Up</string>
    <string name="Fragment_sign_up__full_name">Full name</string>
    <string name="Fragment_sign_up__confirm_password">Confirm password</string>
    <string name="Fragment_sign_up__already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="Fragment_sign_up_land__sign_up">Sign Up</string>
    <string name="Fragment_sign_up_land__email">Email</string>
    <string name="Fragment_sign_up_land__password">Password</string>
    <string name="Fragment_sign_up_land__sign_up_btn">Sign Up</string>
    <string name="Fragment_sign_up_land__full_name">Full name</string>
    <string name="Fragment_sign_in_land__confirm_password">Confirm password</string>
    <string name="Fragment_sign_up_land__already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="Rv_msg_image_item_left__image">Image</string>
    <string name="Rv_msg_image_item_left__10_10_am">10:10 am</string>
    <string name="Rv_msg_image_item_right__image">Image</string>
    <string name="Rv_msg_image_item_right__10_10_am">10:10 am</string>
    <string name="Rv_msg_item_left__message">Message</string>
    <string name="Rv_msg_item_left__10_10_am">10:10 am</string>
    <string name="Rv_msg_item_right__message">Message</string>
    <string name="Rv_msg_item_right__10_10_am">10:10 am</string>
    <string name="Rv_user_item__name">Name</string>
    <string name="Rv_user_item__email">Email</string>
    <string name="Menu_main_sign_out">Sign Out</string>
    <string name="Fragment_sign_in_land__sign_in">Sign In</string>
</resources>