<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChatFragment">

    <include
        android:id="@+id/chatToolbar"
        layout="@layout/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_light"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/chatMessageLlDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatToolbar" />

    <View
        android:id="@+id/chatMessageLlDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/chatMessageLl" />

    <LinearLayout
        android:id="@+id/chatMessageLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <EditText
            android:id="@+id/chatMessageEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Fragment_chat__message"
            android:maxLines="2"
            android:inputType="textShortMessage"
            android:background="@android:color/transparent"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp" />

        <ImageView
            android:id="@+id/chatMessageAttach"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_attach_file"
            android:padding="4dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:contentDescription="@string/Fragment_chat__attach_file" />

        <ImageView
            android:id="@+id/chatMessageSend"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_send"
            android:padding="4dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:contentDescription="@string/Fragment_chat__send_message" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>